[tool.poetry]
name = "bm"
version = "1.1.5"
description = ""
authors = ["Edward Q. Bridges <github@eqbridges.com>"]
license = "MIT"

[tool.poetry.scripts]
bm = "bm.main:app_run"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
